update web/src/locale/effects/langs/en-US/preferences.json. 添加保存偏好英文提示
Signed-off-by: Neil <i165@qq.com>

--- a/web/src/locale/effects/langs/en-US/preferences.json
+++ b/web/src/locale/effects/langs/en-US/preferences.json
@@ -29,6 +29,8 @@
   "plain": "Plain",
   "rounded": "Rounded",
   "save":"Save",
+  "savePreferencesSuccess": "Preferences saved successfully",
+  "savePreferencesFailed": "Failed to save preferences",
   "copyPreferences": "Copy Preferences",
   "copyPreferencesSuccessTitle": "Copy successful",
   "copyPreferencesSuccess": "Copy successful, please override in `src/preferences.ts` under app",
